--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,8 +4,8 @@
   font-style: normal;
   font-weight: 300;
   src: local('Space Grotesk Light'), local('SpaceGrotesk-Light'),
-    url('../fonts/SpaceGrotesk-Light.woff2') format('woff2'),
-    url('../fonts/SpaceGrotesk-Light.woff') format('woff');
+    url('./fonts/SpaceGrotesk-Light.woff2') format('woff2'),
+    url('./fonts/SpaceGrotesk-Light.woff') format('woff');
 }
 
 /* space-grotesk-regular */
@@ -14,8 +14,8 @@
   font-style: normal;
   font-weight: 400;
   src: local('Space Grotesk'), local('SpaceGrotesk'),
-    url('../fonts/SpaceGrotesk-Regular.woff2') format('woff2'),
-    url('../fonts/SpaceGrotesk-Regular.woff') format('woff');
+    url('./fonts/SpaceGrotesk-Regular.woff2') format('woff2'),
+    url('./fonts/SpaceGrotesk-Regular.woff') format('woff');
 }
 
 /* space-grotesk-500 */
@@ -24,8 +24,8 @@
   font-style: normal;
   font-weight: 500;
   src: local('Space Grotesk Medium'), local('SpaceGrotesk-Medium'),
-    url('../fonts/SpaceGrotesk-Medium.woff2') format('woff2'),
-    url('../fonts/SpaceGrotesk-Medium.woff') format('woff');
+    url('./fonts/SpaceGrotesk-Medium.woff2') format('woff2'),
+    url('./fonts/SpaceGrotesk-Medium.woff') format('woff');
 }
 
 /* space-grotesk-600 */
@@ -34,8 +34,8 @@
   font-style: normal;
   font-weight: 600;
   src: local('Space Grotesk SemiBold'), local('SpaceGrotesk-SemiBold'),
-    url('../fonts/SpaceGrotesk-SemiBold.woff2') format('woff2'),
-    url('../fonts/SpaceGrotesk-SemiBold.woff') format('woff');
+    url('./fonts/SpaceGrotesk-SemiBold.woff2') format('woff2'),
+    url('./fonts/SpaceGrotesk-SemiBold.woff') format('woff');
 }
 
 /* space-grotesk-700 */
@@ -44,6 +44,6 @@
   font-style: normal;
   font-weight: 700;
   src: local('Space Grotesk Bold'), local('SpaceGrotesk-Bold'),
-    url('../fonts/SpaceGrotesk-Bold.woff2') format('woff2'),
-    url('../fonts/SpaceGrotesk-Bold.woff') format('woff');
+    url('./fonts/SpaceGrotesk-Bold.woff2') format('woff2'),
+    url('./fonts/SpaceGrotesk-Bold.woff') format('woff');
 }
