starting new design

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,7 +15,8 @@ $screen-lg-min: 992px; // Tablets and small desktops
 $screen-xl-min: 1200px; // Large tablets and desktops
 
 // fonts
-// $font-title: 'IBM Plex Mono';
+$font-title: 'Space Mono',
+'Helvetica';
 
 // Mixins
 
