--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -5,17 +5,21 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 68px;
+  height: 80px;
   display: flex;
   justify-content: space-between;
 
   .logo__container {
-    width: 280px;
-    padding: 20px 40px 0;
+    width: auto;
+    height: 100%;
+    padding: 0;
+    margin-left: 50px;
+    display: flex;
+    align-items: center;
 
     .logo {
       width: 100%;
-      height: auto;
+      // height: 100%;
     }
   }
 }
@@ -45,8 +49,8 @@
       content: '';
       border-radius: 50%;
       background-color: currentColor;
-      height: 8px;
-      width: 8px;
+      height: 6px;
+      width: 6px;
       left: 40%;
       bottom: -14px;
     }
