--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,13 @@
+@import './styles/variables';
+
 .App {
   text-align: center;
-  min-height: 100vh;
+  min-height: calc(100vh - #{$header-height});
+  margin: 0;
+  padding: 0;
 }
 
 main {
-  padding-top: 115px;
+  margin: $header-height 0 0;
+  // padding-top: 20px;
 }
