--- a/src/components/NavBar/styles.scss
+++ b/src/components/NavBar/styles.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 80px;
+  height: $header-height;
   display: flex;
   justify-content: space-between;
 
