--- a/src/views/Launches.scss
+++ b/src/views/Launches.scss
@@ -1,26 +1,58 @@
 @import '../styles/variables';
 
-.launch-latest {
+.launch--latest {
   position: relative;
   display: block;
   height: calc(100vh - #{$header-height});
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .row {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 27px;
 }
 
-.launch-status {
+.launch__filght-number,
+.launch__status {
+  width: 10vw;
+}
+
+.launch__status {
   border: 1px solid;
   border-radius: 30px;
 }
 
-.status-success {
-  border-color: #7BDADA;
+.launch__status--success {
+  border-color: #7bdada;
 }
 
-.status-fail {
+.launch__status--fail {
   border-color: red;
+}
+
+.launch__patch {
+  width: 15vw;
+}
+
+.launch__title {
+  font-size: 40px;
+  margin-bottom: 8px;
+}
+
+.launch__detail {
+  width: 20vw;
+
+  h4 {
+    text-transform: uppercase;
+    font-weight: 500;
+    color: #828282;
+  }
+
+  p {
+    font-size: 24px;
+    font-weight: 700;
+    font-family: $font-title;
+  }
 }
